[package]
name = "meerkat"
version = "0.1.0"
edition = "2021"

authors = ["Paul W."]
description = "Parses a TOML file and outputs a JSON file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
serde_json = "1"
toml = "0.5"
